# Agentic-AI-end-to-end

./: .gitignore  CLAUDE.md  Makefile  README.md  llamastack-run.yaml  main.py  pyproject.toml
.githooks/: pre-commit
.zed/: debug.json  settings.json
agentic-design-patterns/: ch1-prompt-chaining-sample.ipynb  pyproject.toml
config/: llamastack-run.yaml
docs/: README.md  RESTRUCTURE-PLAN.md
docs/00-introduction/: README.md  frameworks-overview.md  infrastructure-comparison.md
docs/01-prompt-chaining/: README.md  adk.md  comparison.md  langchain.md  raw.md
docs/links/: README.md
rhbu-Llama-stack-Tutorial/: README.md  hello-world-chat.py  hello-world.ipynb  main.py  pyproject.toml
