[project]
name = "agentic-ai-end-to-end"
version = "0.1.0"
description = "My research on agentic systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "pyright",
]

[tool.uv.workspace]
members = [
    "packages/common",
    "packages/patterns",
]

[tool.uv.sources]
common = { workspace = true }
